--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -21,7 +21,7 @@
                         <a class="nav-link" href="apikeys">API Keys</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="addplayer">Add Player</a>
+                        <a class="nav-link" href="addpublisher">Add Publisher</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="settings">Settings</a>
@@ -32,7 +32,7 @@
     </nav>
 
     <div class="container mt-5">
-        <h1>Welcome to the C2E Player Service</h1>
+        <h1>Welcome to the C2E Store Service</h1>
         <!-- Dashboard content goes here -->
     </div>
 
