--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -21,7 +21,7 @@
                         <a class="nav-link" href="apikeys">API Keys</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="addpublisher">Add Publisher</a>
+                        <a class="nav-link" href="addpublisher">Manage Publisher</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="settings">Settings</a>
